--- a/camerademo/app/src/main/res/layout/activity_audio_record.xml
+++ b/camerademo/app/src/main/res/layout/activity_audio_record.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +28,19 @@
         android:onClick="stop"
         android:padding="15dp"
         android:text="停止录制"
+        android:textColor="#ffffffff"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/colorAccent"
+        android:clickable="true"
+        android:gravity="center"
+        android:onClick="play1"
+        android:padding="15dp"
+        android:text="播放"
         android:textColor="#ffffffff"
         android:textSize="18sp" />
 </LinearLayout>
