完成音视频录制功能

--- a/camerademo/app/src/main/res/layout/activity_main.xml
+++ b/camerademo/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,19 @@
         android:textColor="#ffffffff"
         android:textSize="18sp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@color/colorAccent"
+        android:clickable="true"
+        android:gravity="center"
+        android:onClick="medio"
+        android:padding="15dp"
+        android:text="音视频录制"
+        android:textColor="#ffffffff"
+        android:textSize="18sp" />
+
 
 
 </LinearLayout>
